Fix .cbp-text-body class - had wrong font size, should inherit body color.

--- a/packages/vanilla/src/sass/typography/_fonts.scss
+++ b/packages/vanilla/src/sass/typography/_fonts.scss
@@ -28,13 +28,11 @@ $font-weight-roboto-mono: (
   "bold": 700
 );
 
-
 .cbp-text-body {
-  color: var(--cbp-color-text-darkest);
-  font-weight: 400;
-  font-size: 1rem;
-  line-height: 20px;
-  max-width: 75em;
+  font-weight: var(--cbp-font-weight-regular);
+  font-size: var(--cbp-font-size-body);
+  line-height: var(--cbp-space-5x);
+  max-width: var(--cbp-line-length-longer);
 }
 
 .cbp-text-button {
